==> wustyuyi/HGS_HP/HGS_HP_V1/softwave/Remote_Control/Drivers/NRF24L01.c <==
#include "main.h"
#include "NRF24L01.h"

void NRF24L01_Write_Reg(u8 reg, u8 value)
{
	NRF24L01_CSN_L;                 	//使能SPI传输
	SPI2_ReadWriteByte(reg);			    //发送寄存器号，这里可以读取到寄存器的状态
	SPI2_ReadWriteByte(value);      		//写入寄存器的值
	NRF24L01_CSN_H;                 	//禁止SPI传输	   
}

u8 NRF24L01_Read_Reg(u8 reg)
{
	u8 reg_val;
	NRF24L01_CSN_L;          				//使能SPI传输		
	SPI2_ReadWriteByte(reg);   				//发送寄存器号
	reg_val = SPI2_ReadWriteByte(0XFF);	    //读取寄存器内容，只需要读取，主机可以随意传送数据过去
	NRF24L01_CSN_H;          			    //禁止SPI传输		    
	return(reg_val);           				//返回状态值
}

void NRF24L01_Read_Buf(u8 reg, u8 *pBuf, u8 len)
{
	u8 i;

	NRF24L01_CSN_L;           							//使能SPI传输
	SPI2_ReadWriteByte(reg);									//发送寄存器值(位置)  	   
	for (i = 0; i < len; i++)
	pBuf[i] = SPI2_ReadWriteByte(0XFF);		//读出数据
	NRF24L01_CSN_H;       									//关闭SPI传输
}

void NRF24L01_Write_Buf(u8 reg, u8 *pBuf, u8 len)
{
	u8 i;
	NRF24L01_CSN_L;          						//使能SPI传输
	SPI2_ReadWriteByte(reg);							//发送寄存器值(位置)
	for	(i = 0; i < len; i++)
	SPI2_ReadWriteByte(*pBuf++); 			//写入数据	 
	NRF24L01_CSN_H;       							//关闭SPI传输
}

u8 NRF24L01_TxPacket(u8 *txbuf)
{
	u8 sta;
  u16 i=0;	
	NRF24L01_CE_L;																						//片选
	NRF24L01_Write_Buf(WR_TX_PLOAD, txbuf, TX_PLOAD_WIDTH);		//写数据到TX BUF  32个字节
	NRF24L01_CE_H;//启动发送
	while(NRF24L01_IRQ!=0)																		//等待发送完成
	{
		i++;
		if(i==255) break;
	}
	sta = NRF24L01_Read_Reg(STATUS);  												//读取状态寄存器的值
	NRF24L01_Write_Reg(WRITE_REG_NRF + STATUS, sta); 					//清除TX_DS或MAX_RT中断标志
	if (sta & MAX_TX)																					//达到最大重发次数
	{
		NRF24L01_Write_Reg(FLUSH_TX, 0xFF);											//清除TX FIFO寄存器 
		return MAX_TX;
	}
	if (sta & TX_OK)																					//发送完成
	{
		return TX_OK;
	}
		return 0xFF;																							//其他原因发送失败
}

void NRF24L01_RX_Mode(void)
{
	EXTI_InitTypeDef EXTI_InitStructure;
	EXTI_ClearITPendingBit(EXTI_Line12);//清空中断标志 
	GPIO_EXTILineConfig(GPIO_PortSourceGPIOB, GPIO_PinSource12); //选择中断管脚PB12
	//定义EXTI结构体
	//由于发送模式下已经将中断线切断，所以当切换成接收模式时，需要重新连接起来
	EXTI_InitStructure.EXTI_Line = EXTI_Line12;							//EXTI线中断开通
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;				    //定义为中断还是事件
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;				//下降沿触发
	EXTI_InitStructure.EXTI_LineCmd = DISABLE;							//使能EXTI线中断
	EXTI_Init(&EXTI_InitStructure);

	NRF24L01_CE_L;
	NRF24L01_Write_Buf(WRITE_REG_NRF+TX_ADDR,(u8*)TX_ADDRESS,TX_ADR_WIDTH);	//写TX节点地址 
	NRF24L01_Write_Buf(WRITE_REG_NRF+RX_ADDR_P0,(u8*)RX_ADDRESS,RX_ADR_WIDTH);//写RX节点地址
	NRF24L01_Write_Reg(WRITE_REG_NRF+EN_AA,0x01);    						//使能通道0的自动应答    
	NRF24L01_Write_Reg(WRITE_REG_NRF+EN_RXADDR,0x01);						//使能通道0的接收地址  	 
	NRF24L01_Write_Reg(WRITE_REG_NRF+RF_CH,40);	    						//设置RF通信频率		  
	NRF24L01_Write_Reg(WRITE_REG_NRF+RX_PW_P0,RX_PLOAD_WIDTH);	//选择通道0的有效数据宽度 	    
	NRF24L01_Write_Reg(WRITE_REG_NRF+RF_SETUP,0x0f);						//设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
	NRF24L01_Write_Reg(WRITE_REG_NRF+NRF24L01_CONFIG,0x0f);			//配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,接收模式 
	NRF24L01_CE_H; 																							//CE为高,进入接收模式 
}

void NRF24L01_TX_Mode(void)
{
	EXTI_InitTypeDef EXTI_InitStructure;//定义EXTI结构体
	//由于接收模式下的IRQ引脚设置为中断输入引脚，所以当切换成发送模式时，需要将中断输入引脚的功能取消
	EXTI_InitStructure.EXTI_Line = EXTI_Line12;//EXTI线中断开通
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;//定义为中断还是事件
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;//下降沿触发
	EXTI_InitStructure.EXTI_LineCmd = DISABLE;//失能EXTI线中断
	EXTI_Init(&EXTI_InitStructure);

	NRF24L01_CE_L;	    
	NRF24L01_Write_Buf(WRITE_REG_NRF+TX_ADDR,(u8*)TX_ADDRESS,TX_ADR_WIDTH);	//写TX节点地址 
	NRF24L01_Write_Buf(WRITE_REG_NRF+RX_ADDR_P0,(u8*)RX_ADDRESS,RX_ADR_WIDTH); 	//设置TX节点地址,主要为了使能ACK
	NRF24L01_Write_Reg(WRITE_REG_NRF+EN_AA,0x01); //使能通道0自动应答    
	NRF24L01_Write_Reg(WRITE_REG_NRF+EN_RXADDR,0x01); //使能通道0的接收地址  
	NRF24L01_Write_Reg(WRITE_REG_NRF+SETUP_RETR,0x1a);//设置自动重发间隔时间:500us + 86us;最大自动重发次数:15次
	NRF24L01_Write_Reg(WRITE_REG_NRF+RF_CH,40);//设置RF通道为40
	
	
	NRF24L01_Write_Reg(WRITE_REG_NRF+RF_SETUP,0x0f);//设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
	NRF24L01_Write_Reg(WRITE_REG_NRF+NRF24L01_CONFIG,0x0e);//配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,发送模式,开启所有中断
	NRF24L01_CE_H;															    //CE为高,10us后启动发送
}
